--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Halogen test</title>
+    <title>Halogen × Purescript test</title>
   </head>
 
   <body>
